<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_white_24"
        android:title="@string/menu_navigation_title_home"/>

    <item
        android:id="@+id/navigation_location"
        android:icon="@drawable/ic_dashboard_white_24"
        android:title="@string/menu_navigation_title_location"/>

    <item
        android:id="@+id/navigation_hotels"
        android:icon="@drawable/ic__notifications_white_24"
        android:title="@string/menu_navigation_title_hotels"/>

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_account_white_24"
        android:title="@string/menu_navigation_title_account"/>

</menu>