<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activity.LoginActivity">

        <ImageView
            android:id="@+id/login_imv_1"
            android:layout_width="0dp"
            android:layout_height="198dp"
            android:layout_marginStart="51dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="51dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/photo_splash" />

        <TextView
            android:id="@+id/login_tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/sofia_pro_regular"
            android:text="@string/activity_login_tv_email"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_imv_1" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_title_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="312dp"
            android:layout_height="55dp"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.515"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_tv_email"
            app:layout_constraintVertical_bias="0.0">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sofia_pro_medium"
                android:hint="@string/activity_login_email_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/login_tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:fontFamily="@font/sofia_pro_regular"
            android:text="@string/activity_login_tv_password"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.144"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_tv_email" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_title_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="312dp"
            android:layout_height="55dp"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_tv_password"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sofia_pro_medium"
                android:hint="@string/activity_login_tv_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_btn_login"
            android:layout_width="167dp"
            android:layout_height="51dp"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/sofia_pro_medium"
            android:text="@string/activity_login_login_button"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:backgroundTint="@color/orange"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_title_password"
            app:layout_constraintVertical_bias="0.241" />

        <TextView
            android:id="@+id/login_tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/sofia_pro_medium"
            android:text="@string/activity_login_forgot_password"
            android:textColor="@color/orange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.837"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_title_password" />

        <TextView
            android:id="@+id/login_tv_no_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/sofia_pro_medium"
            android:text="@string/activity_login_dont_have_account"
            android:textColor="@color/orange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.38"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_btn_login" />

        <TextView
            android:id="@+id/tv_btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/activity_login_sign_up"
            android:fontFamily="@font/sofia_pro_medium"
            android:textColor="@color/orange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.079"
            app:layout_constraintStart_toEndOf="@+id/login_tv_no_account"
            app:layout_constraintTop_toBottomOf="@+id/login_btn_login" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>