<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.DialogPopupActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:background="@color/blue"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/dialog_popup_tv_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:fontFamily="@font/sofia_pro_regular"
            android:text="@string/activity_dialog_popup_question"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/blue"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dialog_popup_btn_yes"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:clickable="true"
                android:text="@string/activity_dialog_popup_yes"
                android:textSize="16sp"
                android:backgroundTint="@color/white"
                android:textColor="@color/color_dialog_popup"
                android:fontFamily="@font/sofia_pro_regular" />

            <Button
                android:id="@+id/dialog_popup_btn_no"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginLeft="6dp"
                android:clickable="true"
                android:text="@string/activity_dialog_popup_no"
                android:textSize="16sp"
                android:backgroundTint="@color/white"
                android:textColor="@color/color_dialog_popup"
                android:fontFamily="@font/sofia_pro_regular" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>