<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activity.RegisterActivity">


        <ImageView
            android:id="@+id/register_imv_1"
            android:layout_width="0dp"
            android:layout_height="198dp"
            android:layout_marginStart="51dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="51dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/photo_splash" />

        <TextView
            android:id="@+id/register_tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/sofia_pro_regular"
            android:text="@string/activity_register_tv_email"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_imv_1" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_title_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="312dp"
            android:layout_height="55dp"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.515"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_tv_email"
            app:layout_constraintVertical_bias="0.0">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sofia_pro_medium"
                android:hint="@string/activity_register_email_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/register_tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:fontFamily="@font/sofia_pro_regular"
            android:text="@string/activity_register_tv_password"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.144"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_tv_email" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_title_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="312dp"
            android:layout_height="55dp"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_tv_password"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sofia_pro_medium"
                android:hint="@string/activity_register_tv_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/register_tv_phonenumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:fontFamily="@font/sofia_pro_regular"
            android:text="@string/activity_register_tv_phonenumber"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.168"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_tv_password" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_title_phonenumber"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="312dp"
            android:layout_height="55dp"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.515"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_tv_phonenumber"
            app:layout_constraintVertical_bias="0.0">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_edt_phonenumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sofia_pro_medium"
                android:hint="@string/activity_register_tv_phonenumber" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/register_tv_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:fontFamily="@font/sofia_pro_regular"
            android:text="@string/activity_register_tv_city"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.131"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_tv_phonenumber" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_title_city"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="312dp"
            android:layout_height="55dp"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.515"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_tv_city"
            app:layout_constraintVertical_bias="0.0">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_edt_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sofia_pro_medium"
                android:hint="@string/activity_register_tv_city" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_btn_sign_up"
            android:layout_width="167dp"
            android:layout_height="51dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/sofia_pro_medium"
            android:text="@string/activity_register_sign_up"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:backgroundTint="@color/orange"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_title_city"
            app:layout_constraintVertical_bias="0.185" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>