<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activity.HotelRegistrationActivity">

        <ImageView
            android:id="@+id/hotel_registration_imv_1"
            android:layout_width="0dp"
            android:layout_height="198dp"
            android:layout_marginStart="51dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="51dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/photo_splash" />

        <TextView
            android:id="@+id/hotel_registration_tv_hotel_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/sofia_pro_regular"
            android:text="@string/activity_hotel_registration_hotelname"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hotel_registration_imv_1" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/hotel_registration_title_hotel_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="312dp"
            android:layout_height="55dp"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.515"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hotel_registration_tv_hotel_name"
            app:layout_constraintVertical_bias="0.0">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/hotel_registration_edt_hotel_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sofia_pro_medium"
                android:hint="@string/activity_hotel_registration_hotelname_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/hotel_registration_tv_rooms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:fontFamily="@font/sofia_pro_regular"
            android:text="@string/activity_hotel_registration_rooms"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.144"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hotel_registration_tv_hotel_name" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/hotel_registration_title_rooms"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="312dp"
            android:layout_height="55dp"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hotel_registration_tv_rooms"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/hotel_registration_edt_rooms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sofia_pro_medium"
                android:hint="@string/activity_hotel_registration_rooms"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/hotel_registration_tv_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:fontFamily="@font/sofia_pro_regular"
            android:text="@string/activity_hotel_registration_rate"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.132"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hotel_registration_tv_rooms" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/hotel_registration_title_rate"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="312dp"
            android:layout_height="55dp"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.515"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hotel_registration_tv_rate"
            app:layout_constraintVertical_bias="0.0">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/hotel_registration_edt_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sofia_pro_medium"
                android:hint="@string/activity_hotel_registration_rate" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/hotel_registration_tv_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:fontFamily="@font/sofia_pro_regular"
            android:text="@string/activity_hotel_registration_city"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.131"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hotel_registration_tv_rate" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/hotel_registration_title_city"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="312dp"
            android:layout_height="55dp"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.515"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hotel_registration_tv_city"
            app:layout_constraintVertical_bias="0.0">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/hotel_registration_edt_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sofia_pro_medium"
                android:hint="@string/activity_hotel_registration_city" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/hotel_registration_btn_save"
            android:layout_width="167dp"
            android:layout_height="51dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/sofia_pro_medium"
            android:text="@string/activity_hotel_registration_save"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:backgroundTint="@color/orange"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hotel_registration_title_city"
            app:layout_constraintVertical_bias="0.185" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>